fix buttons and wrap images

--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ padding: 0px 180px;
     
 }
 
+a {
+    text-decoration: none;
+    color:#F9FAF8
+}
+
 ul {
     list-style: none;
     display: flex;
@@ -64,6 +69,7 @@ ul {
     color: white;
     padding: 5px 24px;
     border: 0;
+    cursor: pointer;
 }
 
 
@@ -104,17 +110,31 @@ img {
     margin-bottom: -50px;
 }
 
+#images {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 40px;;
+}
+
+#images li {
+    width: 200px;
+}
+
+p {
+    color: #1f2937;
+}
+
 .content.three {
     background-color: #E5E7EB;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 #quote {
     font-style: italic;
     font-size: 36px;
     color: #1f2937;
-    font-weight: 300;
+    font-weight: 0;
 }
 
 #author {
@@ -124,30 +144,34 @@ img {
 
 .content.four {
     color: white;
+    padding-top: 90px;
+    padding-bottom: 90px;
 }
 
 .box {
     border-radius: 8px;
     background-color: #3882f6;
-    padding: 10px 56px;
+    padding: 56px 100px;
     display: flex;
     align-items: center;
-    margin: 48px auto;
     justify-content: space-between;
 }
 
 #lowbutton {
+    font-size: 18px;
     color: white;
     background-color: transparent;
     border: 2px solid white;
     border-radius: 8px;
     padding: 5px 30px;
+    cursor: pointer;
 }
 
 #action {
     font-weight: bold;
     font-size: 18px;
     margin-bottom: -10px;
+    color: #F9FAF8;
 }
 
 #signup {
@@ -161,3 +185,8 @@ img {
     padding-top: 18px;
     padding-bottom: 18px;
 }
+
+#footer {
+    color: #F9FAF8;
+}
+
